--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=dev
 encode.salt=$2a$10$bsNHD51BJgCuW0nFOo.6de
 token.secret=$gs335*&&!@#555
+#img upload base src
+img.baseSrc=F:\\gitHub\\blog\\img
