--- a/pom.xml
+++ b/pom.xml
@@ -90,15 +90,15 @@
         </dependency>
 
         <!--shiro-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
             <version>1.8.0</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring-boot-web-starter</artifactId>
-            <version>1.10.0</version>
+            <version>1.11.0</version>
         </dependency>
     </dependencies>
 
