--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -61,7 +61,8 @@ spring:
   #默认默认上传文件大小1m，修改为10MB
   servlet:
     multipart:
-      max-file-size: 10MB
+      max-file-size: 100MB
+      max-request-size: 100MB
 mybatis-plus:
   #指定xml路径，否则爆错
   mapper-locations: classpath:com/chen/**/mapper/xml/*.xml
