--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -63,6 +63,10 @@ spring:
     multipart:
       max-file-size: 100MB
       max-request-size: 100MB
+  #mongodb
+  data:
+    mongodb:
+      uri: mongodb://root:root@127.0.0.1:27017/testdb?authSource=admin&authMechanism=SCRAM-SHA-1
 mybatis-plus:
   #指定xml路径，否则爆错
   mapper-locations: classpath:com/chen/**/mapper/xml/*.xml
